--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="click left">Click Me!</button>
-    <button class="click right">No, Click Me!</button>
+    <button class="left">Click Me!</button>
+    <button class="right">No, Click Me!</button>
   </body>
 </html>
